# CppStarter

./: .gitignore  LICENSE  README.md  meson.build
src/: Entrypoint.cpp  Logging.h
